--- a/app/src/main/res/layout/activity_coins.xml
+++ b/app/src/main/res/layout/activity_coins.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ECE4E4"
-    tools:context=".ui.view.main.MainActivity">
+    tools:context=".ui.view.main.CoinsActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/coins_recycle_view"
